<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:padding="15dp">
            <!-- A CardView that contains a TextView -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp"
                    android:background="@drawable/myrect"
                    android:elevation="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/header_points"
                            android:textAllCaps="true"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/transparentBlackIsh"
                            android:layout_marginVertical="5dp"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/top_point_getters"
                            android:layout_width="fill_parent"
                            android:layout_height="165dp"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/transparentBlackIsh"
                            android:layout_marginVertical="5dp"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_view_more"
                            android:textAllCaps="true"
                            android:layout_gravity="end"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp"
                    android:background="@drawable/myrect"
                    android:elevation="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/goals_header"
                            android:textAllCaps="true"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/transparentBlackIsh"
                            android:layout_marginVertical="5dp"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/top_goal_getters"
                            android:layout_width="fill_parent"
                            android:layout_height="165dp"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/transparentBlackIsh"
                            android:layout_marginVertical="5dp"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_view_more"
                            android:textAllCaps="true"
                            android:layout_gravity="end"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp"
                    android:background="@drawable/myrect"
                    android:elevation="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/assists_header"
                            android:textAllCaps="true"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/transparentBlackIsh"
                            android:layout_marginVertical="5dp"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/top_assist_getters"
                            android:layout_width="fill_parent"
                            android:layout_height="165dp"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/transparentBlackIsh"
                            android:layout_marginVertical="5dp"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_view_more"
                            android:textAllCaps="true"
                            android:layout_gravity="end"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <include layout="@layout/hamburger_layout"/>
</android.support.v4.widget.DrawerLayout>